# Voxlink-web

./: .gitignore  Cargo.toml  Update.bat
.github/workflows/: release.yml  wasm.yml
src/: app.rs  state.rs
src/net/: signaling.rs  supabase.rs  updater.rs  webrtc.rs
src/ui/: chat.rs  components.rs  image_loader.rs  login.rs  profile.rs
